<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Draganddropmy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="but1">1</string>
    <string name="but2">2</string>
    <string name="but3">3</string>
    <string name="score">0</string>
    <string name="score_label">Your score</string>
    <string name="but4">4</string>
    <string name="but5">5</string>
    <string name="but6">6</string>
    <string name="but7">7</string>
    <string name="but8">8</string>
    <string name="but9">9</string>
    <string name="title_activity_operation">Draganddropmy</string>
    <string name="time_label">Time</string>
    <string name="count_sum">0</string>
    <string name="count_diff">0</string>
    <string name="count_multi">0</string>
    <string name="count_div">0</string>
    <string name="action_settings0">Continue</string>
    <string name="action_settings1">Restart</string>
    <string name="action_settings2">Exit</string>

</resources>
