<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.draganddropmy.MainActivity" >

	<Button
		android:id="@+id/but1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/but1" />

	<Button
		android:id="@+id/but2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/but2" />

	<Button
		android:id="@+id/but3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/but3" />

	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<TableRow
			android:id="@+id/tableRow1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/score_label"
				android:textAppearance="?android:attr/textAppearanceLarge" />
		</TableRow>

		<TableRow
			android:id="@+id/tableRow2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/score" />
		</TableRow>

		<TableRow
			android:id="@+id/tableRow3"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
		</TableRow>

		<TableRow
			android:id="@+id/tableRow4"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
		</TableRow>
	</TableLayout>

</LinearLayout>